ADD simple silex api

--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,7 @@
             "email": "teerasak.vic@ascendcorp.com"
         }
     ],
-    "require": {}
+    "require": {
+        "silex/silex": "~2.0"
+    }
 }
